# iridium-stomp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.github/scripts/: README.md
.github/workflows/: ci.yml
docs/: cli.md  durable_subscriptions.md  heartbeats.md  subscriber-guide.md  subscriptions.md
examples/: listen.rs  multi_subscribe.rs  send.rs  send_advanced.rs  subscribe.rs  transactions.rs
src/: codec.rs  connection.rs  frame.rs  lib.rs  parser.rs  subscription.rs
tests/: cli_oneshot.rs  close_disconnect.rs  close_terminates_task.rs  codec_heartbeat.rs  connect_error_tests.rs  connect_options_tests.rs  connect_retry_tests.rs  frame_unit.rs  minimized_regression.rs  parser_unit.rs  regression_replay.rs  subscribe_api_integration.rs  subscription_drop.rs  subscription_stream.rs
