[package]
name = "iridium-stomp"
version = "0.4.1"
edition = "2024"
license = "MIT"
authors = ["Brad Siegfreid <bsiegfreid@me.com>"]
description = "Async STOMP 1.2 client for Rust"
readme = "README.md"
repository = "https://github.com/bsiegfreid/iridium-stomp"
homepage = "https://github.com/bsiegfreid/iridium-stomp"
documentation = "https://docs.rs/iridium-stomp"
keywords = ["stomp", "async", "messaging", "tokio", "rabbitmq"]
categories = ["network-programming", "asynchronous"]
# Ensure docs files are packaged and instruct docs.rs to build with all features
include = ["src/**", "examples/**", "docs/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
cli = ["clap", "ratatui", "crossterm", "chrono"]

[[bin]]
name = "stomp"
path = "src/bin/stomp.rs"
required-features = ["cli"]

[dependencies]

# Async runtime and utilities
tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "sync", "macros", "io-std", "io-util", "signal"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "1"
tracing = "0.1"

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["std", "clock"] }

[dev-dependencies]
rand = "0.8"
